--- a/Python_Flask/섹션 2 : HTML/Part10_AssessmentTwo.html
+++ b/Python_Flask/섹션 2 : HTML/Part10_AssessmentTwo.html
@@ -32,7 +32,7 @@
           <input type="radio" name="Over18" id="no" value="noOver">
 
 
-          <p>Do you have a Credit Card or PayPal?</p>
+          <p>Do you have a Credit Card or Paypal?</p>
           <select name="payment">
             <option value="cc">Credit Card</option>
             <option value="pp">PayPal</option>
