--- a/Python_Flask/섹션 2 : HTML/Part10_AssessmentTwo_self_practice.html
+++ b/Python_Flask/섹션 2 : HTML/Part10_AssessmentTwo_self_practice.html
@@ -40,7 +40,7 @@
             <input type="radio" name="attend" value="No" >
         </label>
 
-        <h3>Q2. (No 체크한 사람만) 참가하지 않는 이유?</h3>
+        <h3>Q2. (No 체크한 사람만!) 참가하지 않는 이유?</h3>
         <select name="reason">
             <option value="졸업연기">졸업연기 예정</option>
             <option value="초과학기">초과학기 예정</option>
